feat: added my details

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,8 +1,13 @@
-h1{
-    text-align: center;
+.head{
     color: #5800FF;
+}
+h1{
     font-size: 6rem;
 }
+h2{
+    font-size: 3rem;
+}
 body{
+    text-align: center;
     background-color: #72FFFF;
 }
